# murphy

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  bqiuo5ov848gogfajkrgqrpnvgtdqcnl  gm83cslhl9cbmmftrkmtebgmcdbndduf.darc  manifest  mise.local.toml  mise.toml  rustfmt.toml
crates/murphy-cli/: Cargo.toml
crates/murphy-cli/src/: cops.rs  lsp.rs  main.rs
crates/murphy-cli/src/output/: human.rs  json.rs  mod.rs  progress.rs
crates/murphy-cli/src/profile/: mod.rs  snapshot.rs  speedscope.rs  summary.rs
crates/murphy-cli/tests/: ast.rs  ast_cli.rs  autocorrect_snapshot.rs  builtin_only_snapshot.rs  cli.rs  cop_parity_metadata.rs  cops_subcommand.rs  fix_e2e.rs  integration_snapshot.rs  layout_closing_parenthesis_indentation.rs  layout_dot_position.rs  layout_space_inside_parens.rs  layout_trailing_whitespace.rs  lint_unreachable_code.rs  lsp_smoke.rs  migrate.rs  mruby_e2e.rs  native_plugin_pack.rs  parallel_determinism.rs  plugin_pack_e2e.rs  rails_pack_e2e.rs  rspec_pack_e2e.rs  style_string_literals.rs
crates/murphy-cli/tests/snapshots/: autocorrect_project.json  builtin_only_project.json  sample_project.json
crates/murphy-core/: Cargo.toml  build.rs
crates/murphy-core/src/: aggregator.rs  ast_sexp.rs  autocorrect.rs  builtin.rs  config.rs  cop.rs  cops.rs  discovery.rs  dispatch.rs  lib.rs  offense.rs  parse.rs  plugin.rs  plugin_loader.rs  plugin_resolver.rs  registry.rs  var_semantic_model.rs
crates/murphy-core/src/builtin/: no_receiver_puts.rs
crates/murphy-core/src/cops/: layout.rs  lint.rs  murphy.rs  style.rs  support.rs
crates/murphy-core/src/mruby/: arena_prelude.rb  build.rs  cop_prelude.rb  mod.rs  pattern_registry.rs  primitives.rs  proxy.rs  sandbox.rs  sdk.rs  state.rs  test_prelude.rb
crates/murphy-core/tests/: autocorrect_fixpoint.rs  autocorrect_idempotency.rs  cop_deadline_isolation.rs  cop_no_puts_mruby.rs  cop_no_receiver_puts.rs  mruby_node_cop_dispatch.rs  plugin_abi_exports.rs
crates/murphy-example-pack/: Cargo.toml
crates/murphy-example-pack/src/: lib.rs  no_eval.rs  todo_format.rs
crates/murphy-example-pack/tests/: dep_boundary.rs
crates/murphy-pattern/: Cargo.toml  build.rs
crates/murphy-pattern/src/: ast.rs  captures.rs  error.rs  ir.rs  lexer.rs  lib.rs  matcher.rs  param.rs  parser.lalrpop  parser.rs  schema.rs
crates/murphy-pattern/tests/: lower_snapshots.rs  parse_snapshots.rs  quantifier_lower_snapshots.rs  quantifier_snapshots.rs  rubocop_pattern_compat.rs
crates/murphy-plugin-api/: Cargo.toml
crates/murphy-plugin-api/src/: abi.rs  config_error.rs  cop.rs  cx.rs  internal.rs  kinds.rs  lib.rs  method_predicates.rs  node_cop.rs  options.rs  severity.rs  test_support.rs  var_semantic_model.rs
crates/murphy-plugin-api/tests/: prism_kinds_coverage.rs
crates/murphy-plugin-macros/: Cargo.toml
crates/murphy-plugin-macros/src/: cop_attr.rs  cop_option_enum.rs  cop_options.rs  lib.rs  node_pattern.rs
crates/murphy-plugin-macros/tests/: cop_attr_behavior.rs  cross_backend_conformance.rs  derive_behavior.rs  node_pattern_behavior.rs  register_behavior.rs  register_modes_equivalence.rs  trybuild.rs
crates/murphy-plugin-macros/tests/ui/: fail_cop_cfg_on_on_node.rs  fail_cop_cfg_on_on_node.stderr  fail_cop_duplicate_kind.rs  fail_cop_duplicate_kind.stderr  fail_cop_generic_impl.rs  fail_cop_generic_impl.stderr  fail_cop_invalid_severity.rs  fail_cop_invalid_severity.stderr  fail_cop_investigation_with_node_param.rs  fail_cop_investigation_with_node_param.stderr  fail_cop_methods_empty.rs  fail_cop_methods_empty.stderr  fail_cop_methods_on_non_send.rs  fail_cop_methods_on_non_send.stderr  fail_cop_missing_name.rs  fail_cop_missing_name.stderr  fail_cop_no_on_node.rs  fail_cop_no_on_node.stderr  fail_cop_on_struct.rs  fail_cop_on_struct.stderr  fail_cop_on_trait_impl.rs  fail_cop_on_trait_impl.stderr  fail_cop_unknown_arg.rs  fail_cop_unknown_arg.stderr  fail_cop_unknown_kind.rs  fail_cop_unknown_kind.stderr  fail_cop_wrong_signature_no_self.rs  fail_cop_wrong_signature_no_self.stderr  fail_cop_wrong_signature_wrong_cx_type.rs  fail_cop_wrong_signature_wrong_cx_type.stderr  fail_cop_wrong_signature_wrong_node_type.rs  fail_cop_wrong_signature_wrong_node_type.stderr  fail_derive_default_outside_enum.rs  fail_derive_default_outside_enum.stderr  fail_derive_duplicate_option_name.rs  fail_derive_duplicate_option_name.stderr  fail_derive_unsupported_type.rs  fail_derive_unsupported_type.stderr  fail_duplicate_name.rs  fail_duplicate_name.stderr  (+52 more)
crates/murphy-rails/: Cargo.toml
crates/murphy-rails/config/: default.yml
crates/murphy-rails/src/: lib.rs
crates/murphy-rails/src/cop/: util.rs
crates/murphy-rails/src/cops/: mod.rs  util.rs
crates/murphy-rails/tests/: cop_parity_metadata.rs  dep_boundary.rs
crates/murphy-rspec/: Cargo.toml
crates/murphy-rspec/config/: default.yml
crates/murphy-rspec/src/: describe_class.rs  lib.rs
crates/murphy-rspec/src/cops/: mod.rs  rspec_helpers.rs
crates/murphy-rspec/tests/: dep_boundary.rs
crates/murphy-std/: Cargo.toml
crates/murphy-std/src/: lib.rs
crates/murphy-std/src/cops/: mod.rs  util.rs
crates/murphy-std/src/layout/: mod.rs  space_inside_parens.rs  trailing_whitespace.rs
crates/murphy-std/src/lint/: debugger.rs  deprecated_class_methods.rs  duplicate_hash_key.rs  empty_when.rs  mod.rs  unreachable_code.rs  unused_method_argument.rs  useless_assignment.rs
crates/murphy-std/src/murphy/: no_receiver_puts.rs
crates/murphy-std/src/style/: mod.rs  string_literals.rs
crates/murphy-std/tests/: cop_authoring_macro.rs  dep_boundary.rs
crates/murphy-translate/: Cargo.toml
crates/murphy-translate/benches/: translate_cost.rs
crates/murphy-translate/src/: lib.rs  translate.rs
crates/murphy-translate/tests/: coverage.rs  golden.rs
crates/murphy-translate/tests/fixtures/: case_in.rb  case_in_pm_b.rb  control_flow.rb  method_def.rb  mixed.rb  realistic.rb
crates/murphy-translate/tests/snapshots/: case_in.sexp  case_in_pm_b.sexp  mixed.sexp  (+2 more)
spikes/composition_poc/: Cargo.toml
spikes/composition_poc/src/: main.rs
(+995 files in other folders)
