[package]
name = "murphy-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "murphy"
path = "src/main.rs"

[dependencies]
murphy-core = { path = "../murphy-core" }
murphy-cache = { path = "../murphy-cache" }
murphy-translate = { path = "../murphy-translate" }
murphy-plugin-api = { path = "../murphy-plugin-api" }
murphy-reporting = { path = "../murphy-reporting" }
# Standard cop pack (Murphy/Lint/Style/Layout, ADR 0018) — statically
# linked into the CLI and registered through the same single-surface
# plugin ABI as `.so` packs (murphy-9cr.23 §12b). The CLI owns the wiring
# because murphy-core treats *all* cops uniformly as `PluginCopV1`s and
# never hardcodes a particular pack.
murphy-std = { path = "../murphy-std" }
clap = { version = "4.6.1", features = ["derive"] }
rayon = "1"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
# Build-order dependency only. Forces cargo to build
# murphy-example-pack's cdylib whenever murphy-cli test binaries are
# compiled. The rlib variant exists solely to satisfy cargo dep
# resolution — we never `use` it from Rust; the e2e test loads the
# cdylib via dlopen (tests/plugin_pack_e2e.rs).
murphy-example-pack = { path = "../murphy-example-pack" }
# Same build-order rationale as murphy-example-pack above, for the
# bootstrap RSpec cop pack (murphy-4n9.4). Loaded via dlopen by
# tests/rspec_pack_e2e.rs; never `use`d from Rust.
murphy-rspec = { path = "../murphy-rspec" }
# Same build-order rationale: the Rails 138-cop arena-migration stub
# pack (murphy-2ob §14a). Loaded via dlopen by tests/rails_pack_e2e.rs;
# never `use`d from Rust.
murphy-rails = { path = "../murphy-rails" }

[features]
default = []
# Mirror of `murphy-core`'s feature gate so the CLI's gated integration
# test (`mruby_e2e`) compiles under `--features mruby-user-cops`. With
# the feature off, the legacy mruby user-cop path stays compiled out.
mruby-user-cops = ["murphy-core/mruby-user-cops"]
