[package]
name = "murphy-example-pack"
version = "0.1.0"
edition = "2024"
description = "Demo plugin pack for the single-surface plugin ABI (ADR 0038) — two cops (Example/NoEval, Example/TodoFormat) showcasing CallNode dispatch and file-visit + #[derive(CopOptions)] authorship vectors."

[lib]
crate-type = ["cdylib", "rlib"]
# The rlib variant exists so that murphy-cli's [dev-dependencies] entry
# resolves through the Cargo dep graph (build ordering for the e2e test in
# crates/murphy-cli/tests/plugin_pack_e2e.rs). Production never `use`s this
# crate from Rust — the cdylib is dlopen'd by murphy-core's plugin_loader.
# See docs/plans/2026-05-24-murphy-9cr10-1-dynamic-plugin-pack-mvp.md
# Phase 4 for the build-ordering rationale.

[dependencies]
# Single-surface plugin ABI (ADR 0038). The pack reaches Murphy internals
# only through this crate; the boundary is asserted by
# tests/dep_boundary.rs (cargo metadata).
murphy-plugin-api = { path = "../murphy-plugin-api" }
# `#[derive(CopOptions)]`-expanded code references `::serde_json` in the
# consuming crate root (standard proc-macro pattern). Permitted: third-
# party crate, not a Murphy-internal one — the boundary gate only forbids
# non-`murphy-plugin-api` Murphy deps.
serde_json = "1"

[dev-dependencies]
# Used by tests/dep_boundary.rs to parse `cargo metadata` JSON.
serde_json = "1"
