[package]
name = "murphy-pattern"
version = "0.1.0"
edition = "2024"
description = "S-expression pattern grammar, parser, and runtime IR for Murphy cops (murphy-9cr.17)."
build = "build.rs"

[dependencies]
murphy-ast = { path = "../murphy-ast" }
lalrpop-util = { version = "0.23", default-features = false }

[build-dependencies]
lalrpop = { version = "0.23", default-features = false }
