[package]
name = "murphy-plugin-api"
version = "0.1.0"
edition = "2024"
description = "Safe, plugin-author-facing surface over the Murphy native plugin ABI."

[dependencies]
murphy-ast = { path = "../murphy-ast" }
# Re-exported (`pub use murphy_plugin_macros::register_cops;`) so a static
# pack like `murphy-std` keeps its single `murphy-plugin-api` runtime
# dependency (single-surface ABI, design §5 of
# `docs/plans/2026-05-22-plugin-reboot-design.md`). Proc-macro crates only
# run at build time — this entry adds no code to a plugin binary.
murphy-plugin-macros = { path = "../murphy-plugin-macros" }
# JSON decoding for `CopOptions::from_config_json` (ADR 0036).
serde_json = "1"
# Re-exported as `::murphy_plugin_api::regex` so that `node_pattern!`-generated
# code can use `::regex::RegexBuilder` / `::regex::Regex` without the caller
# crate needing its own `regex` dependency (D5, murphy-t8km).
regex = "1"
# Re-exports `Param` / `LitView` / `IntoParam` / `match_lit_against_param`
# (Phase E, murphy-aow) so `node_pattern!`-generated code can resolve
# `::murphy_plugin_api::Param` etc. without the caller needing its own
# `murphy-pattern` dependency. No runtime cycle: `murphy-pattern` itself
# depends only on `murphy-ast`.
murphy-pattern = { path = "../murphy-pattern" }
# Optional: only pulled in by the `test-support` feature so the
# parser-driven cop harness (`test_support` module) can `translate`
# Ruby source. Production plugins never use this path; the cdylib
# binary stays free of murphy-translate.
murphy-translate = { path = "../murphy-translate", optional = true }
# Optional, test-support only: re-exported as
# `murphy_plugin_api::test_support::indoc` so plugin packs writing
# `#[cfg(test)] mod tests` get the heredoc-style fixture writer
# without re-declaring the dep. `indoc` is tiny and proc-macro-only.
indoc = { version = "2", optional = true }

[features]
# Exposes the `test_support` module — a parser-driven harness + the
# re-exported `indoc!` macro. Any plugin pack can use this in
# `[dev-dependencies]` to write `#[cfg(test)] mod tests` against its
# cops without rebuilding the `CxRaw` + sink plumbing or pulling in
# `indoc` directly. See `src/test_support.rs`.
test-support = ["dep:murphy-translate", "dep:indoc"]
