[package]
name = "murphy-plugin-macros"
version = "0.1.0"
edition = "2024"
description = "Proc macros for Murphy native plugins (register_cops! and friends)."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
# `full` is needed to parse `#[option(default = [...])]` array-literal
# expressions; `derive` covers the DeriveInput / struct surface.
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "printing", "clone-impls", "derive", "full"] }
# Build-time only: encodes #[option(default = ...)] / enum_values into the
# JSON strings embedded in the generated SCHEMA. Proc-macro crates run at
# compile time, so this never reaches a plugin binary.
serde_json = "1"

[dev-dependencies]
trybuild = "1"
murphy-plugin-api = { path = "../murphy-plugin-api" }
# A cop's `NodeCop::check` names `murphy_ast::NodeId`; the trybuild
# fixtures and behaviour tests impl `NodeCop`, exactly as a real plugin
# author would (a plugin depends on both murphy-plugin-api and murphy-ast).
murphy-ast = { path = "../murphy-ast" }
