[package]
name = "murphy-plugin-macros"
version = "0.1.0"
edition = "2024"
description = "Proc macros for Murphy native plugins (register_cops! and friends)."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
# `full` is needed to parse `#[option(default = [...])]` array-literal
# expressions; `derive` covers the DeriveInput / struct surface.
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "printing", "clone-impls", "derive", "full"] }
# Build-time only: encodes #[option(default = ...)] / enum_values into the
# JSON strings embedded in the generated SCHEMA. Proc-macro crates run at
# compile time, so this never reaches a plugin binary.
serde_json = "1"
# def_node_matcher! parses pattern strings at macro-expansion time.
murphy-pattern = { path = "../murphy-pattern" }
# NodeKindTag / pattern-name resolution for the schema table.
murphy-ast = { path = "../murphy-ast" }

[dev-dependencies]
trybuild = "1"
# Behaviour tests and trybuild fixtures impl `NodeCop` / build a `Cx`,
# exactly as a real plugin author would. (`murphy-ast` is a normal
# dependency above, named at macro-expansion time.)
murphy-plugin-api = { path = "../murphy-plugin-api" }
