[package]
name = "murphy-rspec"
version = "0.1.0"
edition = "2024"
description = "Bootstrap RSpec cop pack for Murphy (murphy-4n9.4) — ships RSpec/DescribeClass via the single-surface plugin ABI (ADR 0038)."

[lib]
crate-type = ["cdylib", "rlib"]
# `rlib` exists so murphy-cli's [dev-dependencies] entry resolves through
# the Cargo dep graph (build ordering for the e2e test in
# crates/murphy-cli/tests/rspec_pack_e2e.rs). Production never `use`s
# this crate from Rust — the cdylib is dlopen'd by murphy-core's
# plugin_loader. Same rationale as murphy-example-pack.

[dependencies]
# Single-surface plugin ABI (ADR 0038). The pack reaches Murphy internals
# only through this crate; the boundary is asserted by
# tests/dep_boundary.rs (cargo metadata).
murphy-plugin-api = { path = "../murphy-plugin-api" }
# submit_cop! / register_cops! が生成するコードで ::linkme:: が必要なため直接依存
linkme = "0.3"
# `#[derive(CopOptions)]`-expanded code references `::serde_json` in the
# consuming crate root (standard proc-macro pattern). Permitted: third-
# party crate, not a Murphy-internal one — the boundary gate only forbids
# non-`murphy-plugin-api` Murphy deps.
serde_json = "1"

[dev-dependencies]
# Used by tests/dep_boundary.rs to parse `cargo metadata` JSON.
serde_json = "1"
# Parser-driven cop tests live in each cop file's `#[cfg(test)] mod
# tests` and use `murphy_plugin_api::test_support::run_cop`. Enabling
# the feature here pulls `murphy-translate` into plugin-api at test
# time only; production builds (no feature) stay free of the parser.
# `tests/dep_boundary.rs` checks runtime `murphy-*` deps only, so the
# single-surface invariant holds.
murphy-plugin-api = { path = "../murphy-plugin-api", features = ["test-support"] }
